# Office_gangstar

./: .gitignore  CMakeLists.txt  character.cpp  character.h  collisionData.cpp  collisionData.h  helpers.cpp  helpers.h  main.cpp  mapCollision.cpp  mapCollision.h  readme.txt
client/: .gitignore  CMakeLists.txt  TempCMake.txt
client/resources/: office_gang_map..tmj  supermarket_map..tmj
client/resources/maps/: Modern_Exteriors_Complete_Tileset.tsj  collision tile.tsj  hardware_interior.tmj  office_gang_map.tmj  office_interior.tmj  office_interior_2.tmj  sunna_interior.tmj  supermarket_map.tmj  upper_map.tmj
client/saved/: readme.txt  save.json
client/src/: character.cpp  character.h  collisionData.cpp  collisionData.h  drawing.cpp  drawing.h  game.cpp  game.h  gameEnums.h  globalVar.h  helpers.cpp  helpers.h  main.cpp  map.cpp  map.h  mapCollision.cpp  mapCollision.h  mapData.cpp  mapData.h  worldEnums.h
client/src/UIHandler/: UI.cpp  UI.h  UIComponent.cpp  UIComponent.h  button.cpp  button.h  buttonEnums.h  tabPanel.cpp  tabPanel.h
client/src/item/: item.cpp  item.h
client/src/multiPlayer/: client.cpp  client.h
client/src/shop/: shop.cpp  shop.h  shopData.cpp  shopData.h
server/: CMakeLists.txt  server.cpp
shared_logic/: mapCollision.cpp
src/: collisionData.h  helpers.cpp  main.cpp  mapCollision.cpp  mapCollision.h
